--- a/src/app/modules/companies/components/add-review-page/add-review-page.component.html
+++ b/src/app/modules/companies/components/add-review-page/add-review-page.component.html
@@ -187,7 +187,7 @@
 
         <div class="mb-3 fst-italic text-muted">* - обязательное поле</div>
 
-        <div class="mb-3 text-muted small">
+        <div class="mb-3 text-muted">
           <div class="mb-1">
             Внимание! Все отзывы проходят модерацию в течение некоторого
             времени. Не переживайте, если не увидели свой отзыв сразу после
