--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -10,8 +10,7 @@ $color-info: #0dcaf0;
 $color-dark: #212529;
 $color-grey: #646464;
 
-$color-purple: #886BE7;
-$color-purple-light: #997EE7;
-$color-purple-dark: #7759E7;
-$color-purple-darker: #664DE7;
-$color-purple-darkest: #553EE7;
+$color-purple-light: #886be7;
+$color-purple: #7759e7;
+$color-purple-darker: #664de7;
+$color-purple-darkest: #412ebd;
