--- a/src/app/modules/companies/components/companies-page/companies-page.component.html
+++ b/src/app/modules/companies/components/companies-page/companies-page.component.html
@@ -88,7 +88,7 @@
 <ng-template #dataLoading>
   <div class="container mt-5">
     <app-data-loader [title]="''">
-      <div class="mt-3">
+      <div class="mt-3 pb-5">
         <div class="text-muted h2 d-flex justify-content-center">
           Загружаем список компаний
         </div>
