--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -16,7 +16,7 @@
 
   <div
     *ngIf="!isAuthenticated && !hasPredefinedFilter"
-    class="mt-5 alert alert-info"
+    class="mt-5 alert alert-success"
   >
     <div class="mb-2 h3">{{ isYourSalaryWithinMarketTitle }}</div>
     <div class="mb-3">
@@ -25,7 +25,7 @@
     </div>
     <div class="">
       <button
-        class="btn btn-primary btn-lg px-5"
+        class="btn btn-purple btn-lg px-5"
         (click)="openAddSalaryAction()"
       >
         Войти / Зарегистрироваться
