--- a/src/app/modules/companies/components/company-page/company-page.component.scss
+++ b/src/app/modules/companies/components/company-page/company-page.component.scss
@@ -17,3 +17,9 @@
   color: #3c3c3c;
   font-style: italic;
 }
+
+.review-left-by-me-label {
+  font-weight: bold;
+  color: #092a00;
+  font-style: italic;
+}
