--- a/src/app/modules/home/components/me/me.component.scss
+++ b/src/app/modules/home/components/me/me.component.scss
@@ -5,3 +5,12 @@
   -ms-filter: blur(5px);
   filter: blur(5px);
 }
+
+.picture-profile {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: center;
+  margin-right: 10px;
+}
