--- a/src/app/modules/companies/components/company-page/company-page.component.html
+++ b/src/app/modules/companies/components/company-page/company-page.component.html
@@ -58,10 +58,14 @@
           Не переживайте, если не увидели свой отзыв сразу после добавления на
           странице компании, нужно немного подождать.
         </div>
+        <div class="mt-2">
+          Отзывы полностью анонимны и после модерации ваше авторство никак не
+          будет показано.
+        </div>
         <div>
-          Отзывы - помощь другим людям узнать больше о компании. Отзыв - это
-          всегда субъективно, однако будьте, пожалуйста, объективны настолько,
-          насколько это возможно.
+          Отзыв - это всегда субъективно, однако будьте, пожалуйста, объективны
+          настолько, насколько это возможно, чтобы помочь другим узнать больше о
+          компании.
         </div>
       </div>
     </div>
