--- a/src/app/modules/admin/components/telegram/inline-replies-stats/inline-replies-stats.component.html
+++ b/src/app/modules/admin/components/telegram/inline-replies-stats/inline-replies-stats.component.html
@@ -1,4 +1,4 @@
-<app-page-header>Использование бота</app-page-header>
+<app-page-header>График использования бота</app-page-header>
 
 <div class="container my-5" *ngIf="stats; else dataLoading">
   <div class="row">
