--- a/src/app/modules/admin/components/companies/company-admin-page/company-admin-page.component.html
+++ b/src/app/modules/admin/components/companies/company-admin-page/company-admin-page.component.html
@@ -91,6 +91,13 @@
         </div>
 
         <div class="row mb-3">
+          <div class="col-md-3">Просмотров</div>
+          <div class="col-md-9">
+            {{ company.viewsCount }}
+          </div>
+        </div>
+
+        <div class="row mb-3">
           <div class="col-md-3">Даты</div>
           <div class="col-md-9">
             <div>
