--- a/src/app/modules/companies/components/companies-page/companies-page.component.html
+++ b/src/app/modules/companies/components/companies-page/companies-page.component.html
@@ -85,6 +85,7 @@
       <div class="mt-5" *ngIf="source && source.results.length > 0">
         <app-pagination-buttons
           [source]="source"
+          [currentPage]="currentPage"
           (pageChange)="loadData($event)"
         ></app-pagination-buttons>
       </div>
