--- a/src/app/modules/companies/components/company-page/company-page.component.html
+++ b/src/app/modules/companies/components/company-page/company-page.component.html
@@ -48,7 +48,9 @@
           class="btn btn-outline-dark small"
           (click)="goBackToList()"
         >
-          <span class="small"><i class="bi bi-arrow-left me-1"></i>К списку компаний</span>
+          <span class="small"
+            ><i class="bi bi-arrow-left me-1"></i>К списку компаний</span
+          >
         </button>
         <button
           type="button"
