--- a/src/app/modules/admin/components/companies/company-admin-page/company-admin-page.component.html
+++ b/src/app/modules/admin/components/companies/company-admin-page/company-admin-page.component.html
@@ -47,7 +47,7 @@
         <div class="row mb-3">
           <div class="col-md-3">Описание</div>
           <div class="col-md-9">
-            <div [innerHTML]="company.description"></div>
+            <div [innerHTML]="companyDescription"></div>
           </div>
         </div>
 
