--- a/src/app/modules/companies/components/companies-page/companies-page.component.html
+++ b/src/app/modules/companies/components/companies-page/companies-page.component.html
@@ -61,8 +61,10 @@
         <a
           *ngFor="let item of companies; let i = index"
           class="mb-3 cursor-pointer company-list-item d-block text-decoration-none"
-          (click)="navigateToCompany(item.id); $event.preventDefault()"
-          [routerLink]="['/companies', item.id]"
+          (click)="
+            navigateToCompany(item.slug ?? item.id); $event.preventDefault()
+          "
+          [routerLink]="['/companies', item.slug ?? item.id]"
           role="button"
         >
           <div class="h5">{{ item.name }}</div>
