--- a/src/app/modules/companies/components/company-page/company-page.component.html
+++ b/src/app/modules/companies/components/company-page/company-page.component.html
@@ -2,7 +2,7 @@
 
 <div class="container my-5" *ngIf="company; else dataLoading">
   <div class="card">
-    <div class="card-body p-5">
+    <div class="card-body mobile-px-5 mobile-py-5">
       <div class="mb-3">
         <div class="h2 mb-2">
           <div class="" *ngIf="company.reviewsCount > 0">
@@ -83,7 +83,7 @@
   <div class="h3 mt-5">Отзывы</div>
 
   <div class="card mt-3" *ngIf="company.reviews.length > 0; else nothingToShow">
-    <div class="card-body p-5">
+    <div class="card-body mobile-px-5 mobile-py-5">
       <div *ngFor="let review of company.reviews" class="mb-5">
         <div class="mb-2">
           <button
@@ -200,7 +200,7 @@
         <div class="mt-3 d-flex justify-content-center">
           <img
             src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/company_reviews_1000.png"
-            class="img-fluid w-30"
+            class="img-fluid mobile-w-30"
             alt="logo"
             title="Кот Магеллан, который любит оставлять отзывы о компаниях"
           />
@@ -228,7 +228,7 @@
       <div class="mt-2 mb-1 d-flex justify-content-center">
         <img
           src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/cat_reviewing_transparent_1000.png"
-          class="img-fluid w-30"
+          class="img-fluid mobile-w-30"
           alt="logo"
           title="Кот Магеллан, который любит оставлять отзывы о компаниях"
         />
